<resources>
    <string name="app_name">instagram clone</string>
    <string name="ibrahim_hussein">Ibrahim Hussein</string>
    <string name="from">from</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name_username">Name/Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="question">\?</string>
    <string name="missing_data">Missing Data</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="email_address_already_exists">Email address already exists</string>
    <string name="invalid_password_weak">Password must be 8 characters minimum</string>
    <string name="create_new_account">Create new account</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="reels">Reels</string>
    <string name="profile">Profile</string>
    <string name="name">name</string>
    <string name="bio">bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_post">Add Post</string>
    <string name="write_a_caption">Write a caption</string>
    <string name="share_to_post">Share to Post</string>
    <string name="your_post">Your post maybe appear in Posts and can be seen on the posts tab under your profile</string>
    <string name="your_reel">Your reel maybe appear in Reels and can be seen on the reels tab under your profile</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="share_to_reel">Share to Reel</string>
    <string name="reel_uploaded_successfully">Reel uploaded successfully</string>
    <string name="uploading..">"Uploading . . ."</string>
    <string name="time">time</string>
    <string name="add_reels">Add Reels</string>
    <string name="follow">Follow</string>
    <string name="un_follow">UnFollow</string>
</resources>