<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/auth_padding"
    tools:context=".ui.auth.SignInFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile_img"
        android:layout_width="@dimen/profile_icon_size"
        android:layout_height="@dimen/profile_icon_size"
        android:layout_marginTop="@dimen/profile_img_margin_top"
        android:src="@drawable/instagram_logo_8869"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_edt_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_edt_margin_xxxl"
        android:background="@drawable/rounded_input"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/edt_txt_padding"
        android:singleLine="true"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_img"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_edt_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_edt_margin_large"
        android:background="@drawable/rounded_input"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/edt_txt_padding"
        android:singleLine="true"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edt_txt"

        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_small_2"
        android:backgroundTint="@color/color_primary"
        android:paddingVertical="@dimen/button_padding"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edt_txt"


        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="@dimen/text_edt_margin_xxxl"
        android:paddingVertical="10dp"
        android:text="@string/create_new_account"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#007dff"


        />


</androidx.constraintlayout.widget.ConstraintLayout>