<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/auth_padding"
    tools:context=".ui.main.profile.UpdateProfileFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="@dimen/profile_icon_size"
        android:layout_height="@dimen/profile_icon_size"
        android:layout_marginTop="@dimen/profile_img_margin_top"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/add_image"
        android:layout_width="@dimen/add_icon_size"
        android:layout_height="@dimen/add_icon_size"
        android:src="@drawable/ic_plus"
        app:civ_border_color="@color/app_color"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@id/profile_img"
        app:layout_constraintEnd_toEndOf="@id/profile_img"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/profile_img"
        app:layout_constraintTop_toTopOf="@id/profile_img"
        app:layout_constraintVertical_bias="0.881"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_edt_txt"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        android:layout_marginTop="@dimen/text_edt_margin_xxxl"
        android:background="@drawable/rounded_input"
        android:hint="@string/name_username"
        android:inputType="text"
        android:paddingHorizontal="@dimen/edt_txt_padding"
        android:singleLine="true"
        android:textColor="@color/app_color"
        android:textColorHint="@color/app_color"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_edt_txt"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        android:layout_marginTop="@dimen/text_edt_margin_large"
        android:background="@drawable/rounded_input"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/edt_txt_padding"
        android:singleLine="true"
        android:textColor="@color/app_color"
        android:textColorHint="@color/app_color"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edt_txt"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_edt_txt"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        android:layout_marginTop="@dimen/text_edt_margin_large"
        android:background="@drawable/rounded_input"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/edt_txt_padding"
        android:singleLine="true"
        android:textColor="@color/app_color"
        android:textColorHint="@color/app_color"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edt_txt"

        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_profile"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_small_2"
        android:backgroundTint="@color/color_primary"
        android:paddingVertical="@dimen/button_padding"
        android:text="@string/update_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edt_txt"


        />


</androidx.constraintlayout.widget.ConstraintLayout>